updated image directory and fixed up some img and text spacing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 
 main {
-    background-color: rgb(68,61,61);
+    background-color: #242121;
 }
 #call-to-action {
     background: rgb(0,0,0);
@@ -21,4 +21,10 @@ main {
 }
 #backend-grab {
     float: left;
+}
+/*ViewPorts or Screensizes beyond Mobile*/
+@media (min-width: 325px){
+    #backend-grab {
+        float: right;
+    }
 }
